[gd_scene load_steps=4 format=3 uid="uid://1yyj200c6esy"]

[ext_resource type="PackedScene" uid="uid://b47cy6nmnfgyq" path="res://visual_novel/visual_novel_generic.tscn" id="1_lw4cy"]
[ext_resource type="Script" path="res://visual_novel/ilot_generic.gd" id="2_kqrqd"]
[ext_resource type="PackedScene" uid="uid://cwfrxjrbsakx1" path="res://visual_novel/clickable_oscilloscope.tscn" id="3_stm6j"]

[node name="VisualNovelGeneric" instance=ExtResource("1_lw4cy")]
script = ExtResource("2_kqrqd")

[node name="clickable_character" parent="." index="1"]
position = Vector2(1248, 472)

[node name="clickable_oscilloscope" parent="." index="2" instance=ExtResource("3_stm6j")]
position = Vector2(544, 480)

[node name="get_out_button" type="Button" parent="." index="3"]
offset_left = 712.0
offset_top = 648.0
offset_right = 1232.0
offset_bottom = 768.0
text = "ON S'CASSE!"
